Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
2.0.0
Description
r-arrow builds in an environment which combines MSVC and clang, invalidating assumptions made in nameof<>() which is used to look up R6 class names. Specifically:
- MSVC prefixes "struct " or "class " to some type names, but this doesn't happen in clang+msvc
- clang+msvc renders the signature of a function taking no arguments as "(void)" instead of "()"
Attachments
Issue Links
- links to