ARROW-10622: [R] Nameof should not use "void" as the crib

On `r-arrow` (which uses the `clang` compiler's msvc compatibility mode), `arrow::util::detail::raw<T>()` is stringified as `arrow::util::detail::raw<T>(void)` which breaks the assumption that "void" can be searched for to find the offset of the typename. "double" is safer

Closes #8681 from bkietz/clang-msvc-nameof-error

Authored-by: Benjamin Kietzman <bengilgit@gmail.com>
Signed-off-by: Benjamin Kietzman <bengilgit@gmail.com>